--- a/join/index.html
+++ b/join/index.html
@@ -1,15 +1,11 @@
 ---
 layout: default
-title: Speakers
+title: join
 ---
 
 <div class="blurb">
 
-      <h2 style="fonts-size: 16px"> Due to COVID-19, the Workshop will be online and live. This is the link on crowdcast for our workshop tomorrow: <a style="color:blue" href="https://www.crowdcast.io/e/cns2020-w10">join here </a></h2>
+      <h2 style="fonts-size: 16px"> Due to COVID-19, the Workshop will be online and live. This is the link to watch our workshop: <a style="color:blue" href="https://www.youtube.com/watch?v=a13LR6dPzpc&t=1s"></a></h2>
       <h2 style="fonts-size: 16px">Registration and Access: Please see the CNS*2020 website for FREE registration and online access to the workshops
-      (this is required to attend).</h2>
-      <br> <h2> Due to time limitations, some of your questions may remain unanswered. However, 
-      we will post them on an <a style="color:blue" href="https://docs.google.com/document/d/1WwH22yaE23jrEL12m29t-D4VHrTyU3FhzfOg01VLQbw/edit?usp=sharingand">online document</a> the speakers will be able to answer. Further details TBA. </h2>
-  
-  
+      (this is required to attend).</h2>  
 </div>
