--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: Dissecting the role of interneurons in mnemonic functions using computati
 	<h2><center>29th Annual Computational Neuroscience Meeting 
 		<a style="color:blue" href="https://www.cnsorg.org/cns-2020/">CNS*2020, Online</a></center></h2>
 	<figure>
-  	<img src="/ocns2020interneurons/figures/ocns-logo.png" alt="OCNS" style="width:50%">
+  	<img src="figures/ocns-logo.png" alt="OCNS" style="width:50%">
 	</figure>
 	
 	
