--- a/join/index.html
+++ b/join/index.html
@@ -5,7 +5,6 @@ title: join
 
 <div class="blurb">
 
-      <h2 style="fonts-size: 16px"> Due to COVID-19, the Workshop will be online and live. This is the link to watch our workshop: <a style="color:blue" href="https://www.youtube.com/watch?v=a13LR6dPzpc&t=1s"></a></h2>
-      <h2 style="fonts-size: 16px">Registration and Access: Please see the CNS*2020 website for FREE registration and online access to the workshops
-      (this is required to attend).</h2>  
+      <h2 style="fonts-size: 16px"> Due to COVID-19, the Workshop has been held online.
+            <a style="color:blue" href="https://www.youtube.com/watch?v=a13LR6dPzpc&t=1s">Here</a> you can watch our workshop.</h2>
 </div>
