--- a/join/index.html
+++ b/join/index.html
@@ -6,5 +6,5 @@ title: join
 <div class="blurb">
 
       <h2 style="fonts-size: 16px"> Due to COVID-19, the Workshop has been held online.
-            <a style="color:blue" href="https://www.youtube.com/watch?v=a13LR6dPzpc&t=1s">Here</a> you can watch our workshop.</h2>
+            <a style="color:blue" href="https://www.youtube.com/watch?v=a13LR6dPzpc&t=1s" target="_blank" rel="noopener noreferrer">Here</a> you can watch our workshop.</h2>
 </div>
